<resources>
    <string name="app_name">Running Recipe</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="started">Start:</string>
    <string name="elapsed_time">Duration:</string>
    <string name="distance">Distance:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="map">Map</string>
    <string name="run_start">Start running</string>
    <string name="run_started_at_format">Run started at %s</string>
    <string name="run_finish">Finish run</string>
    <string name="run_finished_at_format">Run finish at %s</string>

    <string name="report_start">Start running</string>
    <string name="report_started_at_format">Run started at %s</string>
    <string name="report_finish">Finish run</string>
    <string name="report_finished_at_format">Run finish at %s</string>

    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="latitude">Latitude</string>
    <string name="sendTwitter">Twitter</string>
    <string name="new_report">haha</string>

    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
</resources>
